@@ -1,7 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -161,6 +161,11 @@ Gadget::ButtonSignal &Gadget::buttonPressSignal()
 Gadget::ButtonSignal &Gadget::buttonReleaseSignal()
 {
 	return m_buttonReleaseSignal;
+}
+
+Gadget::ButtonSignal &Gadget::buttonDoubleClickSignal()
+{
+	return m_buttonDoubleClickSignal;
 }
 
 Gadget::EnterLeaveSignal &Gadget::enterSignal()
