@@ -97,6 +97,7 @@ void GafferUIBindings::bindGadget()
 		.def( "setToolTip", &Gadget::setToolTip )
 		.def( "buttonPressSignal", &Gadget::buttonPressSignal, return_internal_reference<1>() )
 		.def( "buttonReleaseSignal", &Gadget::buttonReleaseSignal, return_internal_reference<1>() )
+		.def( "buttonDoubleClickSignal", &Gadget::buttonDoubleClickSignal, return_internal_reference<1>() )
 		.def( "enterSignal", &Gadget::enterSignal, return_internal_reference<1>() )
 		.def( "leaveSignal", &Gadget::leaveSignal, return_internal_reference<1>() )
 		.def( "dragBeginSignal", &Gadget::dragBeginSignal, return_internal_reference<1>() )
